# spacy-api-docker

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENCE  LICENSE  Makefile  README.md  build_sassc.sh  pyproject.toml  requirements.txt  server.py  setup.py  start.sh
config/: gunicorn_conf.py  nginx.conf  start.sh  supervisor.conf
displacy_service/: parse.py  server.py
displacy_service/scripts/: app.py  download.py
displacy_service_tests/: test_parse.py  test_server.py
docker/all/: Dockerfile
docker/de/: Dockerfile
docker/en/: Dockerfile  Dockerfile.lg  Dockerfile.md
docker/es/: Dockerfile
docker/fr/: Dockerfile
docker/it/: Dockerfile
docker/nl/: Dockerfile
docker/pt/: Dockerfile
frontend/: Makefile  _data.json  index.jade  package-lock.json  package.json
frontend/assets/js/: main.js
spacy_service/: service.py  utils.py
spacy_service/handlers/: info.py  nlp.py  shared.py
spacy_service/models/: __init__.py  nlp.py  request.py  settings.py
