[tool.poetry]
name = "spacy_service"
version = "3.0.0"
description = ""
authors = ["Johannes Gontrum <gontrum@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
requests = "^2.25.1"
sentry-sdk = "^0.19.5"
spacy = "^3.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
isort = "^5.7.0"
black = "^20.8b1"
pre-commit = "^2.10.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
